--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     angular2: ^2.2.0                      # Dart implementation of the Angular web framework. https://pub.dartlang.org/packages/angular2
     browser: ^0.10.0+2                    # The bootstrap dart.js script for Dart apps running in the browser. https://pub.dartlang.org/packages/browser
     dart_to_js_script_rewriter: ^1.0.2    # Replaces Dart script tags with JavaScript script tags. https://pub.dartlang.org/packages/dart_to_js_script_rewriter
+    angular_utils:
+      git: http://cm-ylng-msk-04/git/angular_utils.frontend.git
 dev_dependencies:
     test: ^0.12.18                        # A library for writing dart unit tests. https://pub.dartlang.org/packages/test
     yaml: ^2.1.12                         # A parser for YAML. https://pub.dartlang.org/packages/yaml
