--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
       git: http://cm-ylng-msk-04/git/angular_utils.frontend.git
     aside:
       git: http://cm-ylng-msk-04/git/aside.frontend.git
+    alert:
+      git: http://cm-ylng-msk-04/git/alert.frontend.git
 dev_dependencies:
     test: ^0.12.18                        # A library for writing dart unit tests. https://pub.dartlang.org/packages/test
     yaml: ^2.1.12                         # A parser for YAML. https://pub.dartlang.org/packages/yaml
