--- a/lib/src/bower.json
+++ b/lib/src/bower.json
@@ -25,7 +25,8 @@
     "bootstrap": "v4.0.0-alpha.5",
     "jquery": "^3.1.1",
     "PACE": "pace#^1.0.2",
-    "bootstrap-daterangepicker": "^2.1.25"
+    "bootstrap-daterangepicker": "^2.1.25",
+    "gauge": "^1.0.1"
   },
   "resolutions": {
     "jquery": "^3.1.1"
