--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
       git: http://cm-ylng-msk-04/git/alert.frontend.git
     auth:
       git: http://cm-ylng-msk-04/git/auth.frontend.git
+    config:
+      git: http://cm-ylng-msk-04/git/config.frontend.git
 dev_dependencies:
     test: ^0.12.18                        # A library for writing dart unit tests. https://pub.dartlang.org/packages/test
     yaml: ^2.1.12                         # A parser for YAML. https://pub.dartlang.org/packages/yaml
