--- a/lib/src/bower.json
+++ b/lib/src/bower.json
@@ -26,7 +26,8 @@
     "jquery": "^3.1.1",
     "PACE": "pace#^1.0.2",
     "bootstrap-daterangepicker": "^2.1.25",
-    "gauge.js": "^1.3.2"
+    "gauge.js": "^1.3.2",
+    "ladda": "^1.0.0"
   },
   "resolutions": {
     "jquery": "^3.1.1"
